# AArch64_HSI_Tensorflow_Server

./: CMakeLists.txt  abstractstubserver.h  main.cc  mystubserver.h  share.cc  share.h  tf.cc  tf.h  tfserver  utils.cc  utils.h
libtf_cnn/: CMakeLists.txt  tf.cc  tf.h  utils.cc
pbfile/: 2dcnn.pb  2dcnn_1115.pb
